2015-04-06  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/companies/company_detail.php: Ticket #2001.

2015-03-31  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/export_csv.php
	  include/functions_form.php: Ticket #1962.

2015-03-30  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/usuarios/configurar_usuarios.php
	  include/functions_db.php
	  include/functions_user.php
	  include/ajax/users.php: Fixed bug validating users.

2015-03-26  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_user.php: Fixed bug deleting users.

2015-03-26  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/usuarios/configurar_usuarios.php: Fixed bug #2040.

2015-03-26  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_form.php
	  include/functions_incidents.php
	  include/ajax/incidents.php
	  operation/incidents/incident_search.php: Fixed bug #1969.

2015-03-25  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_crm.php: Fixed bug #1904.

2015-03-24  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/functions_user.php: Fixed bug importing users from csv.

2015-02-04  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/incidents/incident_search.php: Fixed
	bug #1839.

2015-02-02  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/invoices/invoice_template.php: Added
	new 'Invoice expiration date'.

2015-02-02  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_dbdata.sql
	  operation/invoices/invoices.php: Ticket 
	#1843.

	* extras/mr/18.sql: Added file.

2015-02-02  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/setup/audit.php
	  include/export_csv.php
	  operation/inventories/manage_objects.php: Fixed ticket 
	#1704.

	* images/resolution_disabled.png: Added image.

2015-03-02  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_workunits.php: Now the function
	"create_workunit" returns the created workunit id on success.
	
	* operation/incidents/incident_dashboard_detail.php: Now